tests/sumo/devices/rerouting/assignment/errors/taz_disconnect_ignore/errors.sumo.agg
Warning: 1 total messages of type: No connection between edge '%' and edge '%' found.
Warning: 1 total messages of type: No route for vehicle '%' found.
Warning: 1 total messages of type: Removing vehicle '%' which has no valid route.
